[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Roboto-Regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://Game/Editor/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Editor/Editor.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Editor/Tiker.gd" type="Script" id=4]

[node name="Editor" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 1.0
margin_right = 1024.0
margin_bottom = 65.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node" type="Node" parent="Panel"]

[node name="LineEdit" type="LineEdit" parent="Panel/Node"]
margin_left = 932.114
margin_top = 8.52973
margin_right = 1017.11
margin_bottom = 56.5297
custom_fonts/font = ExtResource( 1 )
text = "60"
align = 3
placeholder_alpha = 0.761
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediaPlayer" type="Control" parent="Panel"]
margin_left = 41.0448
margin_top = -0.420448
margin_right = 910.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiker" type="Node2D" parent="Panel/MediaPlayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Panel/MediaPlayer/Tiker"]
margin_left = -1.0
margin_right = 2.0
margin_bottom = 45.0
rect_scale = Vector2( 1.90718, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MediaPlayer/Tiker"]
margin_left = -9.43875
margin_top = 43.8901
margin_right = -0.438751
margin_bottom = 62.8902
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MediaPlayer"]
margin_top = 45.1684
margin_right = 67.2704
margin_bottom = 86.1684
theme = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/MediaPlayer"]
margin_left = 856.697
margin_top = 45.1684
margin_right = 896.697
margin_bottom = 86.1684
theme = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Panel/Node/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="mouse_entered" from="Panel/MediaPlayer/Tiker/ColorRect" to="." method="_on_Tiker_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MediaPlayer/Tiker/ColorRect" to="." method="_on_Tiker_mouse_exited"]
